--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "appwrite"]
+requires = ["setuptools", "wheel", "appwrite", "requests"]
 build-backend = "setuptools.build_meta"
 
 [tool.isort]
@@ -15,4 +15,5 @@ version = "1.0"
 
 dependencies = [
     "appwrite",
+    "requests"
 ]
