--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ classifiers=
 [options]
 python_requires = >= 3.7
 install_requires =
-    appwrite
+    appwrite == 1.2.0
     requests
 
 [options.extras_require]
